--- a/.github/workflows/build-test-image.yml
+++ b/.github/workflows/build-test-image.yml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: docker/Dockerfile
+          file: docker/test-image/Dockerfile.testnet
           platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
