--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -7,14 +7,14 @@ concurrency:
 
 jobs:
 
-  call-lint:
-    name: "Lint"
-    uses: ./.github/workflows/lint.yml
-    secrets: inherit
+  # call-lint:
+  #   name: "Lint"
+  #   uses: ./.github/workflows/lint.yml
+  #   secrets: inherit
 
   call-build:
     name: "Build"
-    needs: call-lint
+    # needs: call-lint
     uses: ./.github/workflows/build.yml
     secrets: inherit
   
