--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -14,13 +14,12 @@ jobs:
 
   call-build:
     name: "Build"
-    needs: call-lint
     uses: ./.github/workflows/build.yml
     secrets: inherit
   
   call-test:
     name: "Tests"
-    needs: call-build
+    needs: [ call-lint, call-build ]
     uses: ./.github/workflows/test.yml
     secrets: inherit
 
