--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -90,7 +90,7 @@ jobs:
           go install github.com/onsi/ginkgo/v2/ginkgo@latest
 
       - name: Run Ginkgo unit tests
-        run: ginkgo -r --tags upgrade_unit --race --randomize-all --randomize-suites --keep-going --trace --junit-report report-unit.xml
+        run: ginkgo -r --race --randomize-all --randomize-suites --keep-going --trace --junit-report report-unit.xml
 
       - name: Upload unit tests result
         uses: actions/upload-artifact@v3
@@ -176,8 +176,8 @@ jobs:
       - name: Download old node binary (mainnet-latest)
         run: |
           mkdir -p ${{ env.RUNNER_BIN_DIR }}
-          wget -c https://github.com/cheqd/cheqd-node/releases/download/v"${LEGACY_VERSION}"/cheqd-noded-"${LEGACY_VERSION}"-Linux-x86_64.tar.gz
-          tar -xvf cheqd-noded-"${LEGACY_VERSION}"-Linux-x86_64.tar.gz -C ${{ env.RUNNER_BIN_DIR }}
+          wget -c https://github.com/cheqd/cheqd-node/releases/download/v"${LEGACY_VERSION}"/cheqd-noded-"${LEGACY_VERSION}"-linux-amd64.tar.gz
+          tar -xvf cheqd-noded-"${LEGACY_VERSION}"-linux-amd64.tar.gz -C ${{ env.RUNNER_BIN_DIR }}
           sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
         env:
           LEGACY_VERSION: 1.4.4
@@ -215,7 +215,7 @@ jobs:
       - name: Run pre-upgrade tests
         working-directory: ./tests/upgrade/integration/v2
         run: |
-          ginkgo -r --race --tags upgrade_integration --focus-file pre_test.go --keep-going --trace --junit-report ../../../report-pre-upgrade.xml
+          ginkgo -r --race --tags upgrade_integration --focus-file pre_test.go --keep-going --trace --junit-report ../../../../report-pre-upgrade.xml
 
       - name: Upload pre-upgrade tests result
         uses: actions/upload-artifact@v3
@@ -231,7 +231,7 @@ jobs:
       - name: Run post-upgrade tests
         working-directory: ./tests/upgrade/integration/v2
         run: |
-          ginkgo -r --race --tags upgrade_integration --focus-file post_test.go --keep-going --trace --junit-report ../../../report-post-upgrade.xml
+          ginkgo -r --race --tags upgrade_integration --focus-file post_test.go --keep-going --trace --junit-report ../../../../report-post-upgrade.xml
 
       - name: Upload post-upgrade tests result
         uses: actions/upload-artifact@v3
@@ -268,7 +268,7 @@ jobs:
       - name: Submit governance fee parameter change proposals
         working-directory: ./tests/upgrade/integration/v2
         run: |
-          ginkgo -r --race --tags upgrade_integration --focus-file param_change_proposal_test.go --keep-going --trace --junit-report ../../../report-pricing-proposal.xml
+          ginkgo -r --race --tags upgrade_integration --focus-file param_change_proposal_test.go --keep-going --trace --junit-report ../../../../report-pricing-proposal.xml
 
       - name: Upload pricing proposal tests result
         uses: actions/upload-artifact@v3
