Update MD rules

--- a/.github/linters/mlc_config.json
+++ b/.github/linters/mlc_config.json
@@ -13,7 +13,10 @@
     "ignorePatterns": [
         {
           "pattern": "^https://resolver.cheqd.net/"
-        }
+        },
+        {
+			"pattern": "^https://twitter.com/"
+		}
     ],
     "retryOn429": true
 }
