--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -3,6 +3,7 @@ run:
 
 
 linters:
+  disable-all: true
   enable:
     - bodyclose
     - depguard
@@ -62,3 +63,8 @@ linters-settings:
       - "github.com/onsi/gomega"
     # https://staticcheck.io/docs/configuration/options/#initialisms
     initialisms: ["ACL", "API", "ASCII", "CPU", "CSS", "DNS", "EOF", "GUID", "HTML", "HTTP", "HTTPS", "ID", "IP", "JSON", "QPS", "RAM", "RPC", "SLA", "SMTP", "SQL", "SSH", "TCP", "TLS", "TTL", "UDP", "UI", "GID", "UID", "UUID", "URI", "URL", "UTF8", "VM", "XML", "XMPP", "XSRF", "XSS", "SIP", "RTP", "AMQP", "DB", "TS"]
+
+  depgaurd:
+    ignore:
+      - 'filippo.io/edwards25519'
+      - 'github.com/lestrrat-go/jwx/jwk'
