try fixing lint

--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -66,6 +66,4 @@ linters-settings:
     initialisms: ["ACL", "API", "ASCII", "CPU", "CSS", "DNS", "EOF", "GUID", "HTML", "HTTP", "HTTPS", "ID", "IP", "JSON", "QPS", "RAM", "RPC", "SLA", "SMTP", "SQL", "SSH", "TCP", "TLS", "TTL", "UDP", "UI", "GID", "UID", "UUID", "URI", "URL", "UTF8", "VM", "XML", "XMPP", "XSRF", "XSS", "SIP", "RTP", "AMQP", "DB", "TS"]
 
   depgaurd:
-    ignore:
-      - 'filippo.io/edwards25519'
-      - 'github.com/lestrrat-go/jwx/jwk'
+    allow-all: true
