--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -5,22 +5,24 @@ run:
 linters:
   disable-all: true
   enable:
+    - bodyclose
     - depguard
     - dogsled
+    - errcheck
     - exportloopref
     - goconst
     - gocritic
-    - gci
     - gofumpt
-    - gosec
+    - gofmt
+    - goimports
     - gosimple
     - govet
     - ineffassign
     - misspell
     - nakedret
+    - nestif
     - nolintlint
     - staticcheck
-    - revive
     - stylecheck
     - typecheck
     - unconvert
@@ -62,3 +64,6 @@ linters-settings:
       - "github.com/onsi/gomega"
     # https://staticcheck.io/docs/configuration/options/#initialisms
     initialisms: ["ACL", "API", "ASCII", "CPU", "CSS", "DNS", "EOF", "GUID", "HTML", "HTTP", "HTTPS", "ID", "IP", "JSON", "QPS", "RAM", "RPC", "SLA", "SMTP", "SQL", "SSH", "TCP", "TLS", "TTL", "UDP", "UI", "GID", "UID", "UUID", "URI", "URL", "UTF8", "VM", "XML", "XMPP", "XSRF", "XSS", "SIP", "RTP", "AMQP", "DB", "TS"]
+
+  depgaurd:
+    allow-all: true
