--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,20 @@ defaults:
 jobs:
 
   build-binary:
+    permissions:
+      actions: write
+      checks: write
+      contents: write
+      deployments: write
+      issues: write
+      packages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
     name: "Node binary"
     runs-on: ubuntu-20.04
-    permissions:
-      contents: read
-      id-token: write
+   
 
     steps:
       - uses: actions/checkout@v4
