--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,6 +120,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Change file permissions
+        run: sudo find ../ -type d -exec chmod 777 {} +
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
