feat!: `x/did` and `x/resource`  module changes according to sdk v0.47 (#691)
* chore: did module upgrade changes

* fix lint

* go mod tidy

* remove commented code

* remove commented line

* update golang version

* fix lint

* fix lint

* try fix lint

* fix lint

* fix proto-gen

* add logs

* add log

* update

* fix lint

* fix proto-gen

* add perms

* fix build

* lint fix

* lint:gofmt enabled in ci

* try fixing lint

* try fix lint

* reveert

* try lint

* try fix lint

* fix lint

* lint fixes

* fix permissions

* fix releases

* revert

* review changes

* try fixing jobs

* try fixing jobs

* add logs

* add change perms

* revert

* chore: appmodule missing methods added

* try fix build

* add perms

* chore: missing method with attrition variable

* Update .github/linters/.golangci.yaml

Co-authored-by: Akhil Kumar P <36399231+akhilkumarpilli@users.noreply.github.com>

* Update scripts/protocgen.sh

Co-authored-by: Akhil Kumar P <36399231+akhilkumarpilli@users.noreply.github.com>

* review changes

---------

Co-authored-by: atheesh <atheesh@vitwit.com>
Co-authored-by: atheeshp <59333759+atheeshp@users.noreply.github.com>
Co-authored-by: Akhil Kumar P <36399231+akhilkumarpilli@users.noreply.github.com>

--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -3,8 +3,10 @@ run:
 
 
 linters:
+  disable-all: true
   enable:
     - bodyclose
+    - depguard
     - depguard
     - dogsled
     - errcheck
@@ -12,6 +14,7 @@ linters:
     - goconst
     - gocritic
     - gofumpt
+    - gofmt
     - goimports
     - gosimple
     - govet
@@ -42,7 +45,7 @@ linters-settings:
       - badCall # Remove this after CI workflow PR
 
   gofumpt:
-    lang-version: "1.18"
+    lang-version: "1.21"
 
   misspell:
     ignore-words:
@@ -52,7 +55,7 @@ linters-settings:
 
   stylecheck:
     # Select the Go version to target.
-    go: "1.18"
+    go: "1.21"
     # STxxxx checks in https://staticcheck.io/docs/configuration/options/#checks
     # Default: ["*"]
     checks: ["all"]
@@ -62,3 +65,17 @@ linters-settings:
       - "github.com/onsi/gomega"
     # https://staticcheck.io/docs/configuration/options/#initialisms
     initialisms: ["ACL", "API", "ASCII", "CPU", "CSS", "DNS", "EOF", "GUID", "HTML", "HTTP", "HTTPS", "ID", "IP", "JSON", "QPS", "RAM", "RPC", "SLA", "SMTP", "SQL", "SSH", "TCP", "TLS", "TTL", "UDP", "UI", "GID", "UID", "UUID", "URI", "URL", "UTF8", "VM", "XML", "XMPP", "XSRF", "XSS", "SIP", "RTP", "AMQP", "DB", "TS"]
+
+  depguard:
+    rules:
+      main:
+        files:
+          - $all
+        list-mode: lax
+        allow: "*"
+  
+  goconst:
+    min-occurrences: 5
+    ignore-tests: true
+    ignore-strings: "echo '"
+    
