fix: test docker ps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -211,6 +211,11 @@ jobs:
         working-directory: ./tests/upgrade/integration
         run: |
           bash scripts/old_binary_setup.sh
+      
+      - name: Verifying docker processes
+        working-directory: ./tests/upgrade/integration
+        run: |
+          docker ps -a
 
       - name: Run pre-upgrade tests
         working-directory: ./tests/upgrade/integration/v2
