--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "url": "git+https://github.com/cheqd/cheqd-node.git"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^11.0.0",
+    "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
     "conventional-changelog-conventionalcommits": "^7.0.2",
-    "semantic-release": "^22.0.5",
+    "semantic-release": "^22.0.12",
     "swagger-combine": "^1.4.0"
-  }
+  },
+  "engines": {
+		"node": ">=20.0.0"
+	}
 }
