--- a/.github/linters/mlc_config.json
+++ b/.github/linters/mlc_config.json
@@ -12,8 +12,11 @@
     ],
     "ignorePatterns": [
         {
-          "pattern": "^https://resolver.cheqd.net/"
-        }
+            "pattern": "^https://resolver.cheqd.net/"
+        },
+        {
+		    "pattern": "^https://twitter.com/"
+		}
     ],
     "retryOn429": true
 }
