--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,20 +4,27 @@
 
 version: 2
 updates:
-
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     target-branch: "develop"
     directory: "/"
     schedule:
-      interval: "weekly"
+        interval: "weekly"
+    ignore:
+      - dependency-name: "*"
+        update-types:
+          - version-update:semver-patch
 
   # Maintain dependencies for NPM
   - package-ecosystem: "npm"
     target-branch: "develop"
     directory: "/"
     schedule:
-      interval: "weekly"
+        interval: "weekly"
+    ignore:
+      - dependency-name: "*"
+        update-types:
+          - version-update:semver-patch
 
   # Maintain dependencies for Docker
   - package-ecosystem: "docker"
