--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -168,6 +168,7 @@ jobs:
   upgrade-tests:
     name: "Upgrade Tests"
     runs-on: ubuntu-20.04
+    needs: [integration-tests]
     steps:
       - uses: actions/checkout@v4
 
@@ -273,7 +274,6 @@ jobs:
       - name: Submit governance fee parameter change proposals
         working-directory: ./tests/upgrade/integration/v2
         run: |
-          sleep 30
           ginkgo -r --race --tags upgrade_integration --focus-file param_change_proposal_test.go --keep-going --trace --junit-report ../../../../report-pricing-proposal.xml
 
       - name: Upload pricing proposal tests result
