fix: failing tests (#694)
* fix: release permission check

* try fix go releaser

* touch

* touch

* release check

* try fix

* release check

* fix swagger

* fix swagger gen

* fix

* release check

* update goreleaser config

* revert changes

* fix: ante handler ibc fix

* fix tests

* remove test.sh

* fix: integration test check

* keys check

* try fix start script

* fix jq

* remove logs

* fix import keys

* revert

* fix: tx msgServer fixes

* fix: keys check

* fix import keys

* revert

* fix tests

* fix panic

* fix build

* add wait timer

* reduce timer

* increase time

* fix: upgrade test fixes for old binary

* fix: old binary setup.sh

* fix: localnet dir path fix

* fix: upgrade test fix

* add missing post hand;er

* fix tests

* add timer

* add post handler

* add handler

* fix test

* add timer

* try increasing the time

* decrease the timer

* fix tests

* fix lint

* fix lint

* fix lint

* fix tests

* fix

* increase time

* fix: upgrade test moduleVersion fix

* fix: upgrade test fix

* fix: test docker ps

* fix: checking docker before post test

* fix: parse fix

* fix: docker check

* fix: docker keys check

* revert: entrypoint revert

* fix: docker ps check with logs

* fix: upgrade handler with consensus, crisis

* test: docker ps logs check

* test: SendEnabled param fix

* lint: gofumpt fix

* chore: consensus module included

* chore: bank subspace fix

* lint: golang ci fix

* test: feeparam register fix

* fix: bankType param fix

* ci: Update CI workflows (#695)

* update package lock

* Update .releaserc.json

* Bump setup-go

* Update dependabot.yml

* Update pull-request.yml

* Update release workflows

* Uploaded download/upload artifact

* Ignore twitter links

* archives.rlcp is deprecated

* Standardise quotes

* ci: Resolved Integration, Upgrade test 

--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -3,10 +3,8 @@ run:
 
 
 linters:
-  disable-all: true
   enable:
     - bodyclose
-    - depguard
     - depguard
     - dogsled
     - errcheck
@@ -28,7 +26,12 @@ linters:
     - typecheck
     - unconvert
     - unused
-
+    
+issues:
+  exclude-rules:
+    - text: "ST1003:"
+      linters:
+        - stylecheck
 
 linters-settings:
   dogsled:
