--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,7 +79,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         with:
           go-version-file: ./go.mod
           cache: true
@@ -93,7 +93,7 @@ jobs:
         run: ginkgo -r --race --randomize-all --randomize-suites --keep-going --trace --junit-report report-unit.xml
 
       - name: Upload unit tests result
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: report-unit.xml
           path: report-unit.xml
@@ -106,7 +106,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Download binary artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         id: download
         with:
           name: cheqd-noded
@@ -116,7 +116,7 @@ jobs:
         run: sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
 
       - name: Download node Docker image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: cheqd-node-build.tar
 
@@ -139,7 +139,7 @@ jobs:
         run: |
           bash import-keys.sh
 
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         with:
           go-version-file: ./go.mod
           cache: true
@@ -159,7 +159,7 @@ jobs:
         run: docker compose --env-file build-latest.env logs --tail --follow
 
       - name: Upload integration tests result
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: report-integration.xml
           path: report-integration.xml
@@ -189,7 +189,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5
         with:
           go-version-file: ./go.mod
           cache: true
@@ -199,7 +199,7 @@ jobs:
         run: go install github.com/onsi/ginkgo/v2/ginkgo@latest
 
       - name: Download new version of the Docker image (build-latest)
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: cheqd-node-build.tar
 
@@ -210,7 +210,7 @@ jobs:
       - name: Setting up network with old binary inside (mainnet version)
         working-directory: ./tests/upgrade/integration
         run: |
-          bash scripts/setup.sh
+          bash scripts/old_binary_setup.sh
 
       - name: Run pre-upgrade tests
         working-directory: ./tests/upgrade/integration/v2
@@ -218,7 +218,7 @@ jobs:
           ginkgo -r --race --tags upgrade_integration --focus-file pre_test.go --keep-going --trace --junit-report ../../../../report-pre-upgrade.xml
 
       - name: Upload pre-upgrade tests result
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: report-pre-upgrade.xml
           path: report-pre-upgrade.xml
@@ -228,19 +228,24 @@ jobs:
         run: |
           bash scripts/upgrade.sh
 
+      - name: Verifying docker processes
+        working-directory: ./tests/upgrade/integration
+        run: |
+          docker ps -a
+
       - name: Run post-upgrade tests
         working-directory: ./tests/upgrade/integration/v2
         run: |
           ginkgo -r --race --tags upgrade_integration --focus-file post_test.go --keep-going --trace --junit-report ../../../../report-post-upgrade.xml
 
       - name: Upload post-upgrade tests result
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: report-post-upgrade.xml
           path: report-post-upgrade.xml
 
       - name: Download binary artifact (build-latest)
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         id: download
         with:
           name: cheqd-noded
@@ -255,7 +260,7 @@ jobs:
           ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --junit-report ../../report-upgraded-integration.xml
 
       - name: Upload post-upgrade integration tests result
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: report-upgraded-integration.xml
           path: report-upgraded-integration.xml
@@ -271,7 +276,7 @@ jobs:
           ginkgo -r --race --tags upgrade_integration --focus-file param_change_proposal_test.go --keep-going --trace --junit-report ../../../../report-pricing-proposal.xml
 
       - name: Upload pricing proposal tests result
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: report-pricing-proposal.xml
           path: report-pricing-proposal.xml
@@ -282,7 +287,7 @@ jobs:
           ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --skip-file cli_diddoc_test.go --skip-file cli_diddoc_negative_test.go --skip-file cli_resource_test.go --skip-file cli_resource_negative_test.go --junit-report ../../report-pricing-change.xml
 
       - name: Upload pricing change tests result
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: report-pricing-change.xml
           path: report-pricing-change.xml
@@ -304,37 +309,37 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Download unit test
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: report-unit.xml
 
       - name: Download integration test report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: report-integration.xml
 
       - name: Download pre-upgrade test Report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: report-pre-upgrade.xml
 
       - name: Download post-upgrade test Report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: report-post-upgrade.xml
 
       - name: Download upgraded integration test Report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: report-upgraded-integration.xml
 
       - name: Download pricing proposal test Report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: report-pricing-proposal.xml
 
       - name: Download pricing change test Report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: report-pricing-change.xml
 
