--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -151,6 +151,7 @@ jobs:
       - name: Run Ginkgo integration tests
         working-directory: ./tests/integration
         run: |
+          sleep 10
           ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --junit-report ../../report-integration.xml
 
       - name: Show logs
