--- a/.gitignore
+++ b/.gitignore
@@ -447,3 +447,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# ignore mnemonics
+tests/ibc-defi/cheqd_relayer_mnemonic.txt
+tests/ibc-defi/osmo_relayer_mnemonic.txt
