--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -303,7 +303,7 @@ jobs:
     runs-on: ubuntu-20.04
     # NOTE: If not next major release, only unit and integration tests are necessary, otherwise all tests are needed.
     # needs: [unit-tests, integration-tests]
-    needs: [unit-tests, integration-tests]
+    needs: [unit-tests, integration-tests, upgrade-tests]
     if: always()
 
     steps:
