--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,11 @@ permissions:
   packages: read
   checks: write
 
-
 jobs:
 
   build-binary:
     name: "Node binary"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04  # Updated to 22.04
 
     steps:
       - uses: actions/checkout@v4
@@ -39,7 +38,7 @@ jobs:
 
   build-docker:
     name: "Docker image"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04  # Updated to 22.04
     needs: build-binary
     env:
       IMAGE_NAME: ${{ github.repository }}
