--- a/docker/localnet/docker-compose.yml
+++ b/docker/localnet/docker-compose.yml
@@ -27,6 +27,10 @@ services:
       - type: volume
         source: validator-0-data
         target: /home/cheqd
+      - type: volume
+        source: validator-0-keyring
+        target: /home/cheqd/.cheqdnode/keyring-test
+
     env_file:
       - container-env/validator-0.env
     configs:
