--- a/docker/localnet/docker-compose.yml
+++ b/docker/localnet/docker-compose.yml
@@ -26,10 +26,10 @@ services:
     volumes:
       - type: volume
         source: validator-0-data
-        target: /home/cheqd
-      - type: volume
-        source: validator-0-keyring
-        target: /home/cheqd/.cheqdnode/keyring-test
+        target: /home/cheqd/.cheqdnode
+      # - type: volume
+      #   source: validator-0-keyring
+      #   target: /home/cheqd/.cheqdnode/keyring-test
 
     env_file:
       - container-env/validator-0.env
@@ -283,4 +283,4 @@ volumes:
   validator-3-data:
   seed-0-data:
   observer-0-data:
-  validator-0-keyring:
+  # validator-0-keyring:
